--- a/src/app/hearing/components/ChatBox.module.css
+++ b/src/app/hearing/components/ChatBox.module.css
@@ -1,7 +1,5 @@
 .chatbox_container {
   max-width: 100%;
-  width: 500px;
-  margin: auto;
 
   display: flex;
   justify-content: center;
@@ -20,14 +18,16 @@
 
 .chat_container {
   max-width: 100%;
-  width: 500px;
-  margin: auto;
 
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: normal;
   gap: 10px;
+
+  border: 1px solid #a2d8e4;
+  border-radius: 4px;
+  padding: 10px;
 }
 
 /** text area  */
