--- a/src/app/_components/components.module.css
+++ b/src/app/_components/components.module.css
@@ -1,31 +1,30 @@
 :root {
-  --text-color: #464646;
-  --text-color-dark: #2c2c2c;
-  --text-color-light: #adadad;
-  --main-color: #67c5ff;
-  --main-color-dark: #32b1ff;
-  --main-color-light: #8fd4ff;
-  --sub-color: #8aa8fa;
-  --sub-color-dark: #6b92ff;
-  --sub-color-light: #a2bbff;
+  --text-color: #352e2b;
+  --text-color-light: #aeafaf;
+  --main-color: #4b5f65;
+  --main-color-dark: #2c393d;
+  --main-color-light: #b7c6c7;
+  --sub-color: #9da8d6;
+  --sub-color-dark: #464668;
+  --sub-color-light: #bbbeca;
 }
 
 /** button */
 
 .btn_border {
   display: inline-block;
-  font-size: 1rem;
-  padding: 0.3em 1em;
+  font-size: 0.9em;
+  padding: 0.2em 0.8em;
   text-decoration: none;
-  color: var(--main-color);
-  border: solid 2px var(--main-color);
+  color: var(--sub-color);
+  border: solid 2px var(--sub-color);
   background: white;
   border-radius: 3px;
   transition: 0.4s;
 }
 
 .btn_border:hover {
-  background: var(--main-color);
+  background: var(--sub-color);
   color: white;
 }
 
@@ -103,7 +102,6 @@
   display: flex;
   flex-flow: column;
   gap: 5px;
-  margin: 1rem 0;
 }
 
 .textarea label {
@@ -152,6 +150,6 @@
 }
 
 .FlexTextarea__textarea:focus {
-  border: 2px solid var(--sub-color);
+  border: 2px solid var(--sub-color-dark);
   outline: 0;
 }
